# Python-dtiam

./: CHANGELOG.md  INSTALLATION.md  README.md  RELEASES.md  install.bat  install.sh  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/rules/: api-reference.md  authentication.md  configuration.md  troubleshooting.md
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  COMMANDS.md  QUICK_START.md
src/dtiam/: __init__.py  client.py  output.py
src/dtiam/commands/: bulk.py  create.py  describe.py  template.py
src/dtiam/resources/: bindings.py
src/dtiam/utils/: bind_params.py
tests/: conftest.py  test_bind_params.py  test_resources.py
